tests/neg/companion-scope-inference-shadowing-aliases.check
-- [E007] Type Mismatch Error: tests/neg/companion-scope-inference-shadowing-aliases.scala:22:19 -----------------------
22 |  val c: MyColor = Red // error
   |                   ^^^
   |                   Found:    (Strings.Red : String)
   |                   Required: AliasUser.MyColor
   |
   |                   Note: `Lib.Color` has a member named `Red`; qualify as `Lib.Color.Red` if you meant that.
   |
   | longer explanation available when compiling with `-explain`
